Bug 459498 - Saving .psd shows a mistaken warning about fractional frame durations
Summary: Saving .psd shows a mistaken warning about fractional frame durations
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-21 20:02 UTC by Freya Lupen
Modified: 2022-09-21 23:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2022-09-21 20:02:57 UTC
Saving a .psd shows a dialog that reads:
>You will lose information when saving this image as a Photoshop image. Reason:
>The image is animated with a frame duration in fractions of a millisecond. The format cannot represent this, and the frame duration will be rounded to the nearest millisecond.
even though the file is not animated and the warning message is intended for .webp and .jxl formats.

SOFTWARE/OS VERSIONS
Krita 5.2.x git hash d1ffb35

ADDITIONAL INFORMATION
The commit where the message was added: https://invent.kde.org/graphics/krita/-/commit/0f2a6ff76624668cac606f8e848db1e908bd49eb
Comment 1 amyspark 2022-09-21 23:19:56 UTC
Git commit 7c68d0750588eb3f3417f83db756b3d37dbd1859 by L. E. Segovia.
Committed on 21/09/2022 at 23:17.
Pushed by lsegovia into branch 'master'.

impex: don't check for framerates if the image isn't animated

M  +4    -0    libs/impex/IntegralFrameDuration.h

https://invent.kde.org/graphics/krita/commit/7c68d0750588eb3f3417f83db756b3d37dbd1859