impex: don't check for framerates if the image isn't animated

BUG: 459498